Improve support for jetty in the build SchemeWrapper's evalInputStream changed to throw a SchemeException on   error; this is an interface change, but I think all the dependencies   are caught, and the self-tests run with the Jetty server, and with   the Tomcat version. Version 0.4.5, I think.